--- a/404.html
+++ b/404.html
@@ -3,12 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta content="" name="keywords">
 <title>404 Page not found | Jeff&#39;s Blog</title>
-<link rel="stylesheet" href="//jkirkell.github.io/css/style.css">
-<link rel="stylesheet" href="//jkirkell.github.io/css/override.css">
-<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
+<link rel="stylesheet" href="/css/style.css" />
+<link rel="stylesheet" href="/css/override.css" />
+<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 
-<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css">
+<link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css" />
 
 </head>
 
@@ -19,7 +20,7 @@
       <h2 class="subtitle is-4">
         Page not found
       </h2>
-      <a class="button" href="jkirkell.github.io">Home Page</a>
+      <a class="button" href="jeff.kirkell.com">Home Page</a>
     </div>
   </div>
 </section>
