--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta content="" name="keywords">
 <title>Jeff&#39;s Blog</title>
-<link rel="stylesheet" href="/css/style.css" />
-<link rel="stylesheet" href="/css/override.css" />
+<link rel="stylesheet" href="https://jeff.kirkell.com/css/style.css" />
+<link rel="stylesheet" href="https://jeff.kirkell.com/css/override.css" />
 <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css" />
 
 <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.6.0/styles/github.min.css" />
